modified:   index.html 	modified:   styles/styles.css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,3 +2,8 @@ nav {
     background-color: steelblue;
     padding: 10px;
 }
+nav a {
+    color: white;
+    display: block;
+    padding: 20px;
+}
