--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,3 +24,13 @@ p {
 main {
     max-width: 840px;
 }
+
+aside {
+    width: 20rem;
+    margin: 1rem;
+    border: 1px solid rgba(0,0,0,0.2); /* 1 */
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+}
