--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@ nav a {
 h1 {
     color: steelblue;
 }
-img {
+main img {
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
@@ -33,4 +33,13 @@ aside {
     background-color: #eee;
     color: #333;
     text-align: center;
+}
+
+aside img{
+    width: 200px;
+    height: auto;
+}
+
+p {
+    padding: 0;
 }
