--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,3 +43,9 @@ aside img{
 p {
     padding: 0;
 }
+
+footer {
+    margin-top: 15px;
+    border-top: 1px solid #000;
+    text-align: center;
+}
