--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@ main img {
     box-shadow: 0 0 30px gray;
 }
 p {
-    padding: 10px;
+    padding: 0;
 }
 
 main {
@@ -32,7 +32,6 @@ aside {
     padding: 1rem;
     background-color: #eee;
     color: #333;
-    text-align: center;
 }
 
 aside img{
