modified:   wwr/site-plan-rafting.html 	modified:   wwr/styles/site-plan-rafting.css

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu Sans Mono&displau=swap')
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu Sans Mono&displau=swap');
 body {
     font-family: var(--paragraph-font);
     max-width: 960px;
