--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&family="Ubuntu Sans Mono"&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family="Ubuntu+Sans+Mono"&display=swap');
 body {
     font-family: var(--paragraph-font);
     max-width: 960px;
