modified:   week02/styles/box-model.css

--- a/week02/styles/box-model.css
+++ b/week02/styles/box-model.css
@@ -9,7 +9,7 @@
 
 .callout img {
     float: right;
-	margin: 0 0 10px 15px;
+	margin: 10px 5px;
 	border: 1px solid #000;
 	padding: 3px;
 	background-color: #16b937;
