modified:   styles/styles.css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,7 +63,7 @@ footer {
 
 .box {
     margin: 1rem;
-    border: 1px solid rgba(0, 0,0,.1);
+    border: 1px solid rgba(1, 1, 53, 0.1);
     padding: 1rem;
     color: black;
     background-color: aliceblue;
