modified:   wwr/about.html 	modified:   wwr/styles/rafting.css

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -28,6 +28,9 @@ h1, h2, h3, h4, h5, h6 {
     font-family: var(--heading-font);
     color: var(--primary-color);
 }
+p{
+    color: var(--accent1-color) ;
+}
 header{
     display:flex;
     justify-content: space-between;
