--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -22,7 +22,8 @@
     }
 body {
     font-family: var(--paragraph-font);
-    max-width: 100%;
+    font-size:small;
+    max-width: 800px;
     padding: 20px;
     color: var(--primary-color);
 }
@@ -33,9 +34,9 @@ header{
     display:flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
-    background-color: var(--accent1-color);
-    border: #0f0a0a solid 1px;
+    /* padding: 10px; */
+    /* background-color: var(--accent1-color); */
+    /* border: #0f0a0a solid 1px; */
     
 }
 header nav{
@@ -44,10 +45,11 @@ header nav{
     display:inline-flex;
     margin-left: 25px;
     width:fit-content; 
+    border: 1px solid;
+    border-color:black;
  
 }
 header nav a{
-    display: block;
     color: var(--nav-hover-link-color);
     border: 1px solid;
     border-color:#f5efed;
@@ -67,20 +69,36 @@ header img{
     width: 80px;
 }
 main div{
-    display:block;
+    width: 100%;
+    display: flex;
     position: relative;
+    justify-content: center;
 }
 main div h1{
+    display: block;
     position:absolute;
     top: 15px;
-    left: 42%;
+    color:var(--primary-color);
 }
+main div article{
+    position: absolute;
+    top: 50px;
+    background-color:cornflowerblue;
+    margin: 30px;
+}
+
+main div article p{
+    margin:20px
+}
+
 .hero img{
     display: block;
     width: 100%;
     height: auto;
 }
-#client img{
+img.special{
+    position: relative;
+    margin: 20px;
     float: right;
-    width: 30px;
+    width: 80px;
 }
