modified:   wwr/about.html 	modified:   wwr/images/wwr_image3.jpg 	modified:   wwr/images/wwr_image5.jpg 	modified:   wwr/styles/rafting.css

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -91,6 +91,12 @@ main div article p{
     margin:20px
 }
 
+main section h2{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: goldenrod;
+}
+
 .hero img{
     display: block;
     width: 100%;
