modified:   wwr/styles/rafting.css 	modified:   wwr/styles/site-plan-rafting.css

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -18,6 +18,8 @@ body {
     --nav-link-color: #f8f8ff;
     --nav-hover-link-color:#ea4f4c;
     --nav-hover-background-color: #f5f5dc;
+
+    --paragraph-color:#3b013b;
     }
 
     body{
