--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -19,7 +19,7 @@ body {
     --nav-hover-link-color:#ea4f4c;
     --nav-hover-background-color: #f5f5dc;
 
-    --paragraph-color:#3b013b;
+    --paragraph-color:#381702;
     }
 
     body{
@@ -40,6 +40,7 @@ body {
 
     p{
         padding: 25px;
+        color: var(--paragraph-color);
     }
 
     nav{
