modified:   wwr/styles/site-plan-rafting.css

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -19,7 +19,7 @@ body {
     --nav-hover-link-color:#ea4f4c;
     --nav-hover-background-color: #f5f5dc;
 
-    --paragraph-color:#381702;
+    --paragraph-color:black;
     }
 
     body{
