--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,9 @@
 *{
+    /* Universal selector
+       Setting margin to 0
+       Setting padding to 0
+       Setting box-sizing to border-box
+    */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -16,6 +21,8 @@ h1 {
     color: steelblue;
 }
 main img {
+    position: relative;
+    bottom:20px;
     width: 100px;
     height: auto;
     border: 1px solid steelblue;
@@ -27,18 +34,21 @@ p {
     padding: 0;
 }
 
-main {
+body{
     max-width: 840px;
 }
 
 aside {
-    width: 20rem;
+    width: 20em;
+    text-align: center;
+    align-items: center;
     background-color: #eee;
     color: #333;
     position: relative;
 }
 
 aside img{
+    
     width: 200px;
     height: auto;
 }
@@ -46,8 +56,9 @@ aside img{
 aside h2{
     position: absolute;
     top: 20px;
-    left: 80px;
+    left: 130px;
 }
+
 
 p {
     padding: 0;
@@ -59,10 +70,12 @@ footer {
     text-align: center;
 }
 
+
 /* Class Selectors */
 
 .box {
-    margin: 1rem;
+    margin-top: 2rem;
+    margin-left: 1rem;
     border: 1px solid rgba(1, 1, 53, 0.1);
     padding: 1rem;
     color: black;
