modified:   index.html 	modified:   styles/styles.css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 *{
     /* Universal selector
        Setting margin to 0
@@ -32,10 +34,13 @@ main img {
 }
 p {
     padding: 0;
+    margin: 1rem;
 }
 
 body{
     max-width: 840px;
+    font-size: medium;
+    font-family: Roboto, serif;
 }
 
 aside {
@@ -80,4 +85,7 @@ footer {
     padding: 1rem;
     color: black;
     background-color: aliceblue;
+}
+.box-ul{
+    padding-left: 2rem;
 }
