--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@
 }
 nav {
     display:flex;
-    background-color: steelblue;
+    background-color: rgb(3, 35, 62);
     padding: 10px;
     align-items: center;
     justify-content:space-around;
