modified:   wwr/about.html 	new file:   wwr/images/About Us.html 	new file:   wwr/images/About Us_files/css2 	new file:   wwr/images/About Us_files/directions.webp 	new file:   wwr/images/About Us_files/facebook_icon.webp 	new file:   wwr/images/About Us_files/happy_client.jpg 	new file:   wwr/images/About Us_files/hero.jpg 	new file:   wwr/images/About Us_files/instagram_icon.webp 	new file:   wwr/images/About Us_files/logo.jpg 	new file:   wwr/images/About Us_files/rafting.css 	new file:   wwr/images/About Us_files/twitter_icon.webp 	new file:   wwr/images/About Us_files/wwr_image1.jpg 	new file:   wwr/images/About Us_files/wwr_image2.jpg 	new file:   wwr/images/About Us_files/wwr_image3.jpg 	new file:   wwr/images/About Us_files/wwr_image4.jpg 	new file:   wwr/images/About Us_files/wwr_image5.jpg 	new file:   wwr/images/directions.webp 	new file:   wwr/lixo/about.html 	new file:   wwr/lixo/about1.html 	new file:   wwr/lixo/styles/lixo.css 	new file:   wwr/lixo/styles/rafting.css 	new file:   wwr/lixo/styles/rafting1.css 	new file:   wwr/lixo/styles/rafting2.css 	new file:   wwr/lixo/styles/site-plan-rafting.css 	modified:   wwr/styles/rafting.css

--- a/wwr/images/About Us_files/rafting.css
+++ b/wwr/images/About Us_files/rafting.css
@@ -194,20 +194,12 @@ main section div{
     padding-left: 10px;
     padding-right: 10px;
 }
-.rafting-images h2{
-    text-align: center;
-}
 
-.rafting-images div{
-    display: flex;
+#imagelist{
+    
     justify-content: space-around;
     align-items: center;
 }
-
 .rafting-images img{
     width: 100px;
-}
-
-.rafting-images figure figcaption{
-    text-align: center;
 }
