--- a/wwr/lixo/styles/rafting1.css
+++ b/wwr/lixo/styles/rafting1.css
@@ -99,13 +99,13 @@ main div article p{
 }
 
 main section h2{
-    padding-top: 10px;
-    padding-bottom: 10px;
     color:var(--secondary-heading-color);
 }
 
 
-
+.rafting-images img{
+    width: 300px;
+}
 
 footer nav img{
     width: 30px;
@@ -114,7 +114,7 @@ footer nav img{
 header{
     display:grid;
     grid-template-columns: 1fr 1fr;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center; 
 }
 header nav{
@@ -162,52 +162,17 @@ header img{
     margin-left: 100px;    
 }
 
-main section div{
+.grid-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto auto;   
-    background-color: antiquewhite;
-}
-
-#header1{
-    padding-top: 10px;
-    padding-left: 60px;
-    grid-column-start: 3;
-    grid-column-end: 4;
-}
-#paragraph1{
-    padding-left: 10px;
-    grid-column-start:1;
-    grid-column-end: 3;
-}
-
-#paragraph2{
-    padding: 1px;
-    grid-column-start:4;
-    grid-column-end: 6;
-}
-
-#image1{
-    width: 200px;
-    grid-column-start:3;
-    grid-row-start: 2;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-.rafting-images h2{
+    grid-template-columns: auto auto auto;
+    background-color: #2196F3;
+    padding: 50px;
+  }
+  .grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 30px;
     text-align: center;
-}
-
-.rafting-images div{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.rafting-images img{
-    width: 100px;
-}
-
-.rafting-images figure figcaption{
-    text-align: center;
-}
+  }
+  
