--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -15,7 +15,7 @@
     
     --heading-font: Roboto, serif;
     --heading-color:black;  
-    --secondary-heading-color:#DAA520;
+    --secondary-heading-color:      #6b4e06;
 
     --paragraph-font: "Patrick Hand SC", cursive;
     --paragraph-color:black;
@@ -86,6 +86,7 @@ main div h1{
     display: block;
     position:absolute;
     top: 15px;
+    color: white;
 }
 main div article{
     position: absolute;
