--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,26 +11,44 @@
     box-sizing: border-box;
 }
 nav {
+    /* CSS flex is used to horizontally layout the nav element links. */
     display:flex;
+     /*_____________________________________________________________________ */
     padding: 10px;
     align-items: center;
     justify-content:space-evenly;
     background-color: rgb(3, 35, 62);
 }
 nav a {
-    display: block;
+    /* The nav anchor tags are styled with padding and no text-decoration. */
     padding: 20px;
+    text-decoration: none;
+    /*_____________________________________________________________________ */
     color: white;
     background-color: rgb(3, 35, 62);
-    text-decoration: none;
+    display: block;
 }
 h1 {    
     color: steelblue;
+    /* A bottom border is applied to the h1 element. ______________________*/
     border-bottom: 2px solid  steelblue;
+    /*_____________________________________________________________________ */
+}
+p {
+    padding: 0;
+    margin: 1rem;
+}
+
+body{
+    max-width: 840px;
+    font-size:small;
+    font-family: Roboto, serif;
 }
 main{
-    grid-column: 2/3;
-    margin: 10px;
+    /* The div.grid is a CSS Grid and displays the aside and main elements
+     side by side with the main on the right and the aside on the left. */
+    grid-column: 2/3; /*Main on the righ*/
+    /* margin: 10px; */
 }
 main img {
     position: relative;
@@ -44,31 +62,25 @@ main img {
     box-shadow: 0 0 30px gray;
     float:right;
 }
-p {
-    padding: 0;
-    margin: 1rem;
-}
-
-body{
-    max-width: 840px;
-    font-size:small;
-    font-family: Roboto, serif;
+main p{
+    text-align: justify;
 }
 
 aside {
+    /* The div.grid is a CSS Grid and displays the aside and main elements
+     side by side with the main on the right and the aside on the left. */
     width: 20rem;
     text-align: center;
     align-items: center;
     background-color: #eee;
     color: #333;
     position: relative;
-    grid-column: 1/2;
+    grid-column: 1/2; /*Aside on the left*/
     grid-row: 1/2;
 }
 
 aside img{
-    
-    width: 200px;
+    width: 250px;
     height: auto;
 }
 
@@ -79,14 +91,21 @@ aside h2{
 }
 
 
-p {
-    padding: 0;
+aside p {
+    text-align: justify;
+    width: 250px;
 }
 
 footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+    justify-content: center;
 }
 
 
@@ -104,12 +123,11 @@ footer {
     padding-left: 2rem;
 }
 
-header, .grid, footer {
-    max-width: 840px;
-    margin: 0 auto;
-}
+
 
 .grid{
+    /* The div.grid is a CSS Grid and displays the aside and main elements side by side
+     with the main on the right and the aside on the left. */
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 1fr;
