--- a/week05/aula01/table3.css
+++ b/week05/aula01/table3.css
@@ -58,6 +58,10 @@ table {
     border: 1px solid rgb(160 160 160);
     padding: 4px 6px;
   }
-  th{
+  thead{
+    position: sticky;
+    top: 0;
     vertical-align: bottom;
-  }
+  } 
+
+
