--- a/week05/styles/poll-form.css
+++ b/week05/styles/poll-form.css
@@ -1,16 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+*{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+
+body{
+    margin: 0;
+    font-family: "Montserrat";
+    padding: 10px;
+}
+
 button,
 input,
 select,
 textarea {
   font-family: inherit;
   font-size: 100%;
-}
-input,
-textarea,
-select,
-button {
   width: 150px;
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+}
+
+header{
+    width: 600px;
+    margin: 5px;
+    background-color:brown;
+    border: 2px solid;
+}
+header>h1{
+    font-size:large;
+    color:white;
+    text-align: center;
+}
+form{
+    margin:5px;
+    width: 600px;
+    padding: 5px;
+    border: 2px solid;
+    border-radius: 5px;
+    background-color:ivory;
+    display: grid;
 }
