--- a/week05/styles/poll-form.css
+++ b/week05/styles/poll-form.css
@@ -12,15 +12,22 @@ body{
     padding: 10px;
 }
 
+label,
 button,
 input,
 select,
 textarea {
-  font-family: inherit;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 100%;
-  width: 150px;
   padding: 0;
   margin: 0;
+}
+button{
+    width: 100px;
+}
+
+button:hover{
+    background-color: cadetblue;
 }
 
 header{
@@ -42,4 +49,33 @@ form{
     border-radius: 5px;
     background-color:ivory;
     display: grid;
+}
+fieldset{
+    display: grid;
+    grid-gap: 2px;
+    padding: 3px;
+    border: 1px solid;
+    margin-bottom: 5px;
+}
+legend{
+    padding: 2px;
+    color: blue;
+    font-size: larger;
+    font-weight: bold;
+}
+label{
+    text-align: right;
+    padding-right: 5px;
+}
+
+input, 
+select,
+textarea{
+    padding: 5px;
+    font-size: large;
+} 
+
+input[type = "checkbox"]{
+    width: 25px;
+    height: 25px;
 }
