--- a/week05/styles/poll-form.css
+++ b/week05/styles/poll-form.css
@@ -34,7 +34,9 @@ header{
     width: 600px;
     margin: 5px;
     background-color:brown;
-    border: 2px solid;
+    border: 2px black;
+    border-style:double;
+    border-radius: 4px;
 }
 header>h1{
     font-size:large;
@@ -78,4 +80,17 @@ textarea{
 input[type = "checkbox"]{
     width: 25px;
     height: 25px;
+
+}
+
+footer{
+    color: white;
+    width: 600px;
+    text-align: center;
+    font-size:small;
+    background-color: brown;
+    border: 2px black;
+    border-style:double;
+    border-radius: 4px;
+    margin: 5px;
 }
