modified:   week05/poll-form.html 	modified:   week05/styles/poll-form.css

--- a/week05/styles/poll-form.css
+++ b/week05/styles/poll-form.css
@@ -94,3 +94,15 @@ footer{
     border-radius: 4px;
     margin: 5px;
 }
+
+.form-item{
+    display: grid;  
+    align-items: center;
+}
+.column1{
+    grid-template-columns: 3fr 1fr;
+    margin: 2px;
+}
+.column2{
+    grid-template-columns: 1fr 2fr;
+}
