modified:   wwr/quiz.html 	modified:   wwr/styles/quiz.css

--- a/wwr/styles/quiz.css
+++ b/wwr/styles/quiz.css
@@ -3,12 +3,13 @@ margin: 0;
 padding: 0;
 box-sizing: border-box;
 }
-
+header{
+    text-align: center;
+}
 body{
     padding: 10px;
     width: 480px;
     height: fit-content;
-    border: 1px solid;
 }
 
 b,
@@ -23,9 +24,11 @@ fieldset{
 button{
     color: white;
     background-color: blue;
-    width: 450px;
-    margin: 5px;
-
+    margin: 10px;
+    border: 1px;
+    border-radius: 5px;
+    padding: 5px;
+    font-size:large;
 }
 
 .form-item{
@@ -38,7 +41,10 @@ button{
     margin: 2px;
 }
 .column2{
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr;
     margin: 2px;
 }
-
+.bodydiv{
+    background-color: lightgray;
+    border: 1px solid black;
+}
