modified:   wwr/quiz.html 	modified:   wwr/styles/quiz.css

--- a/wwr/styles/quiz.css
+++ b/wwr/styles/quiz.css
@@ -48,3 +48,7 @@ button{
     background-color: lightgray;
     border: 1px solid black;
 }
+.inputlabel{
+    margin-left: 3px;
+    padding: 2px;
+}
