--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -216,3 +216,24 @@ main section div{
 .rafting-images figure figcaption{
     text-align: center;
 }
+
+.headgriditem{
+    grid-row: 1;
+    grid-column: 1/6;
+    text-align: center;
+    border: 1px solid red;
+}
+.phone{
+   grid-row:  1;
+   grid-column: 1/6 ;
+   border: 1px solid black;
+}
+.email{
+    grid-row: 2;
+    grid-column: 1/6;
+}
+.mapitem{
+    grid-row: 2;
+    grid-column: 3/6;
+    border: 1px dashed green;
+}
