--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -221,19 +221,29 @@ main section div{
     grid-row: 1;
     grid-column: 1/6;
     text-align: center;
-    border: 1px solid red;
+    background-color:cadetblue;
+}
+.contactitems{
+    grid-row:2;
+    grid-column: 1/3;
+}
+
+.mapitem{
+    grid-row: 3;
+    grid-column: 2/5;
+    padding: 15px;
 }
 .phone{
-   grid-row:  1;
-   grid-column: 1/6 ;
-   border: 1px solid black;
+    grid-row: 4;
+    grid-column: 1/6;
+    
 }
 .email{
-    grid-row: 2;
+    grid-row: 5;
     grid-column: 1/6;
 }
-.mapitem{
-    grid-row: 2;
-    grid-column: 3/6;
-    border: 1px dashed green;
+.address{
+    grid-row: 6;
+    grid-column: 1/6;
 }
+
