--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -167,7 +167,7 @@ main section div{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: auto auto;   
-    background-color: antiquewhite;
+    background-color: rgb(254, 254, 253);
 }
 
 #header1{
@@ -217,33 +217,43 @@ main section div{
     text-align: center;
 }
 
+.commonsetting1{
+    grid-column: 1/6;
+    text-align: center;
+    background-color:rgba(237, 230, 230, 0.946);
+}
 .headgriditem{
     grid-row: 1;
     grid-column: 1/6;
     text-align: center;
     background-color:cadetblue;
 }
-.contactitems{
-    grid-row:2;
-    grid-column: 1/3;
+
+
+.top{
+    padding-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    grid-row: 2;
+}
+
+.phone{
+    grid-row: 3;
+}
+.email{
+    grid-row: 4;
+    padding-bottom: 10px;
+}
+.address{
+    grid-row:6;
+    grid-column: 1/6;
+    text-align: center;
+    padding-bottom: 10px;
 }
 
 .mapitem{
-    grid-row: 3;
-    grid-column: 2/5;
-    padding: 15px;
-}
-.phone{
-    grid-row: 4;
-    grid-column: 1/6;
-    
-}
-.email{
     grid-row: 5;
-    grid-column: 1/6;
-}
-.address{
-    grid-row: 6;
-    grid-column: 1/6;
+    grid-column: 2/5;
+    padding: 10px;
 }
 
