--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -30,16 +30,13 @@
 
 } 
 
+
 body {
     border: 2px solid;
     max-width: 800px;
     padding: 20px;
     color: var(--primary-color);
 }
-
-main{
-    background-color: var(--general-background-color);
-}  
 
 h1, h2, h3, h4, h5, h6 {
     /* Styling headings */
@@ -60,7 +57,6 @@ figcaption{
     font-size: smaller;
 }
 
-
 /* Styling class hero */
 .hero img{
     display: block;
@@ -74,8 +70,6 @@ img.special{
     float: right;
     width: 80px;
 }
-
-
 main div h1{
     /* Positioning the h1 element inside the <div> element */
     display: block;
@@ -92,14 +86,6 @@ main div article{
 
 main div article p{
     margin:20px
-}
-
-
-main section div{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto auto;   
-    background-color: rgb(254, 254, 253);
 }
 
 main section h2{
@@ -163,6 +149,7 @@ header img{
     margin-left: 100px;    
 }
 
+
 #header1{
     padding-top: 10px;
     padding-left: 60px;
@@ -210,8 +197,55 @@ header img{
     text-align: center;
 }
 
+.commonsetting1{
+    grid-column: 1/6;
+    text-align: center;
+    background-color:rgba(237, 230, 230, 0.946);
+}
 
-/* Week 05 Styling */
+
+.top{
+    padding-top: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    grid-row: 2;
+}
+
+.phone{
+    grid-row: 3;
+}
+.email{
+    grid-row: 4;
+    padding-bottom: 10px;
+}
+.address{
+    grid-row:6;
+    grid-column: 1/6;
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+.mapitem{
+    grid-row: 5;
+    grid-column: 2/5;
+    padding: 10px;
+}
+.formsection{
+    display: block;
+    background-color: rgba(237, 230, 230, 0.946);
+    padding: 5px;
+}
+.formitems{
+    padding-bottom: 10px;
+}
+/* Trabalhando a partir daqui */
+
+.specialdiv{
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto;
+    background-color: #f5f5dc;
+}
 
 /* Styling first div element */
 .part1{
@@ -220,17 +254,11 @@ header img{
     position: relative;
     justify-content: center;
 }
-
-.specialdiv{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto auto auto auto auto;
-}
-
 /* Styling heading element of contact section */
 .headgriditem{
-    grid-row: 1/3;
-    grid-column: 1/6;
-    text-align: center;
-    background-color:lightgray
+    grid-row: 1;
+    grid-column: 3/5;
+    text-align: center;  
 }
+
+
