--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -305,6 +305,8 @@ header img{
     height: 250px; 
 }
 
+/* Styling employee area*/
+
 .employeegrid{
     display: grid;
     grid-template-columns: auto auto auto;
@@ -331,5 +333,72 @@ header img{
 }
 .p1{
     text-align: center;
+}
+
+/* Styling contact us form */
+form{
+    margin:5px;
+    width: auto;
+    padding: 5px;
+    border: 2px solid;
+    border-radius: 5px;
+    background-color:ivory;
+    display: grid;
+}
+
+label,
+button,
+input,
+select,
+textarea {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+fieldset{
+    display: grid;
+    grid-gap: 2px;
+    padding: 3px;
+    border: 1px solid;
+    margin-bottom: 5px;
+}
+
+legend{
+    padding: 2px;
+    color: blue;
+    font-size: larger;
+    font-weight: bold;
+}
+label{
+    text-align: left;
+    padding-right: 5px;
+}
+
+button{
+    width: 100px;
+}
+
+button:hover{
+    background-color: cadetblue;
+}
+
+input, 
+select,
+textarea{
+    padding: 5px;
+    font-size: large;
+} 
+
+.bcontainer{
+    text-align: center;
+}
+.f1{
+    text-align: center;
+}
+.fclient{
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
