--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -403,11 +403,14 @@ textarea{
 /* Styling Trips page */
 
 .firstelement{
-    grid-column: 1/9;
+    grid-column: 2/7;
+    text-align: center;
 }
 .secondelement{
+    grid-row: 2;
     grid-column: 1/9;
 }
 .thirdelement{
+    grid-row: 3;
     grid-column: 1/9;
 }
