--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 /* A pre defined style set */
 *{
     margin: 0;
@@ -17,7 +19,7 @@
     --heading-color:black;  
     --secondary-heading-color:rgb(2, 2, 97);
 
-    --paragraph-font: "Patrick Hand SC", cursive;
+    --paragraph-font: "Epilogue", sans-serif;
     --paragraph-color:black;
 
     --nav-background-color: #222;
@@ -52,6 +54,7 @@ p{
      /* Defining font and color that will be used for <p> tags */
     font-family:  var(--paragraph-font);
     color: var(--paragraph-color);
+    font-size: medium;
 }
 figcaption{
     /* Styling figcaption */
@@ -59,7 +62,6 @@ figcaption{
     font-family: var(--heading-font);
     font-size: smaller;
 }
-
 
 /* Styling class hero */
 .hero img{
@@ -107,17 +109,16 @@ main section h2{
     color:var(--secondary-heading-color);
 }
 
-footer nav img{
-    width: 30px;
-}
 
-header{
+/* This section formats the Header.*/
+.theader{
     display:grid;
     grid-template-columns: 1fr 1fr;
     justify-content: space-between;
     align-items: center; 
 }
-header nav{
+/* Formating navigation componeny */
+.comp_nav{
     background-color: var(--nav-background-color);
     font-size: 1.2rem;
     display:flex;
@@ -125,23 +126,56 @@ header nav{
     width:fit-content; 
     border: 2px solid;
 }
-header nav a{
+
+/* Formating navigation link */
+.comp_nav_a{
     color: var(--nav-hover-link-color);
     border: 1px solid;
     text-decoration: none;
     padding: 1rem;
 }
-header nav a:link, nav a:visited{
+
+/* Fixing the link color, so it doesn't change 
+if the link is clicked. */
+.comp nav a:link, nav a:visited{
     color: var(--nav-link-color);
 }
 
-header nav a:hover{
+/* This style will make the element change color 
+when the mouse pointer passes over it */
+.comp_nav a:hover{
     display: block;
     color: var(--nav-hover-link-color);
     background-color: var(--nav-hover-background-color);
 }
-header img{
+.theader img{
     width: 120px;
+}
+/* End of header formatting section. */
+
+
+/* Start of the section that formats the form. */
+
+/* Styling contact us form */
+.contactus{
+    margin:20px;
+    width: auto;
+    padding: 5px;
+    border: 2px solid;
+    border-radius: 5px;
+    background-color:ivory;
+    display: grid;
+}
+
+.bcontainer{
+    text-align: center;
+}
+.f1{
+    text-align: center;
+}
+.fclient{
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 label,
@@ -162,6 +196,8 @@ fieldset{
     border: 1px solid;
     margin-bottom: 5px;
 }
+
+/* Start of the section that formats the form. */
 
 legend{
     padding: 2px;
@@ -192,6 +228,11 @@ textarea{
     font-size: large;
 } 
 
+/* This section formats the footer. */
+
+footer nav img{
+    width: 30px;
+}
 
 .base{
     display: flex;
@@ -262,11 +303,7 @@ textarea{
 /* Week 05 Styling */
 
 /* Common Styling */
-.c1{
-    font-family: 'Times New Roman', Times, serif;
-    text-align: center;
-    font-size:small
-}
+
 
 /* Styling first div element */
 .part1{
@@ -337,6 +374,9 @@ textarea{
     grid-column: 2/4;
     grid-row: 10;
 }
+.adressmap>p{
+    font-size: small;
+}
 
 .map{
     grid-row: 10;
@@ -378,27 +418,7 @@ textarea{
     text-align: center;
 }
 
-/* Styling contact us form */
-.contactus{
-    margin:5px;
-    width: auto;
-    padding: 5px;
-    border: 2px solid;
-    border-radius: 5px;
-    background-color:ivory;
-    display: grid;
-}
 
-.bcontainer{
-    text-align: center;
-}
-.f1{
-    text-align: center;
-}
-.fclient{
-    padding-top: 30px;
-    padding-bottom: 30px;
-}
 
 /* Styling Trips page */
 
