--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -116,7 +116,11 @@ main section h2{
     justify-content: space-between;
     align-items: center; 
 }
-/* Formating navigation componeny */
+
+.teste{
+    border: 1px solid red;
+}
+/* Formating navigation component */
 .comp_nav{
     background-color: var(--nav-background-color);
     font-size: 1.2rem;
@@ -258,6 +262,7 @@ textarea{
     border: 1px solid;
 }
 
+
 /* Start styling the History section of the About.html page */
 
 #header1{
@@ -357,8 +362,6 @@ footer nav img{
     text-align: left;
 }
 
-
-
 /* Styling Email area */
 .emailcontact{
     border-radius: 10px;
@@ -421,16 +424,14 @@ footer nav img{
 
 
 /* Styling Trips page */
-
 .firstelement{
-    grid-column: 2/7;
-    text-align: center;
+    display: grid;
+    place-items:center;
 }
-.secondelement{
-    grid-row: 2;
-    grid-column: 1/9;
+.box{
+    max-width:560px;
+    height:fit-content;
+    border: 2px solid black;
+    background-color: rgb(195, 241, 195);
 }
-.thirdelement{
-    grid-row: 3;
-    grid-column: 1/9;
-}
+
