--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -25,22 +25,21 @@
     --nav-background-color: #222;
     --nav-link-color: #f8f8ff;
     --nav-hover-link-color:#ea4f4c;
-    --nav-hover-background-color: #f5f5dc;
+    --nav-hover-background-color: #e3e3d5;
 
     --special-article-background-color: cadetblue;
-    --general-background-color:rgb(254, 249, 249);
+    --general-background-color:rgb(239, 238, 220);
 
 } 
 
 body {
-    border: 2px solid;
     max-width: 800px;
-    padding: 20px;
     color: var(--primary-color);
 }
 
 main{
     background-color: var(--general-background-color);
+    border: 2px ridge;
 }  
 
 h1, h2, h3, h4, h5, h6 {
@@ -87,7 +86,7 @@ main div h1{
 main div article{
     position: absolute;
     top: 50px;
-    background-color:var(--special-article-background-color);
+    background-color: var(--accent1-color);
     margin: 30px;
 }
 
@@ -113,19 +112,14 @@ main section h2{
 .theader{
     display:grid;
     grid-template-columns: 1fr 1fr;
-    justify-content: space-between;
     align-items: center; 
-}
-
-.teste{
-    border: 1px solid red;
 }
 /* Formating navigation component */
 .comp_nav{
     background-color: var(--nav-background-color);
     font-size: 1.2rem;
     display:flex;
-    margin-left: 25px;
+    margin-left: 65px;
     width:fit-content; 
     border: 2px solid;
 }
@@ -152,7 +146,7 @@ when the mouse pointer passes over it */
     background-color: var(--nav-hover-background-color);
 }
 .theader img{
-    width: 120px;
+    width: 100px;
 }
 /* End of header formatting section. */
 
@@ -184,7 +178,6 @@ when the mouse pointer passes over it */
 .fclient>h3{
     text-align: center;
 }
-
 
 fieldset{
     display: grid;
@@ -299,11 +292,14 @@ footer nav img{
 
 .base{
     display: flex;
+    margin-top: 2px;
+    padding-top: 3px;
     align-items: center;
-    justify-content:space-around;
+    justify-content:space-between;
     text-align: center;
     background-color: var(--secondary-color);
     height: 40px;
+    border: 2px ridge;
 }
 
 .paragraph-base{
@@ -311,8 +307,8 @@ footer nav img{
     /* margin-left: 160px; */
 }
 .base-nav{
-    margin-top: 3px;
-    /* margin-right: 100px;    */
+    margin-top: 2px;
+    padding: 5px;
 }
 
 
@@ -330,8 +326,7 @@ footer nav img{
 }
 
 .rafting-images img{
-    width: 100px;
-    
+    width: 100px;  
 }
 
 .rafting-images figure figcaption{
@@ -424,14 +419,69 @@ footer nav img{
 
 
 /* Styling Trips page */
-.firstelement{
+.first_element{
     display: grid;
     place-items:center;
+    
 }
 .box{
-    max-width:560px;
+    margin-top: 15px;
+    max-width:510px;
     height:fit-content;
-    border: 2px solid black;
-    background-color: rgb(195, 241, 195);
+    padding: 5px;
+    text-align: center;
+
 }
+.box>form>button{
+    margin-top: 15px;
+    margin-bottom: 15px;
+    width: 250px;
+    height: 25px;
+}
+
+.second_element{
+    padding-top: 20px;
+    display: grid;
+    gap: 2px;
+    text-align: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    /* border-bottom: 5px ridge; */
+    margin-bottom: 20px;
+}
+.sec_elem_img{
+    width: auto;
+    max-width: 210px;
+    height: 160px;
+}
+.offer_text{
+    padding: 20px;
+    text-align: justify;
+    font-size:small;
+}
+
+table{
+    border-collapse: collapse;
+}
+
+tbody tr td{
+    border: 1px solid black;
+    padding: 5px;
+}
+
+thead tr th{
+    border: 1px solid black;
+    padding: 5px;
+}
+
+.interspace{
+    width: auto;
+    height:50px;
+    background-color: var(--accent1-color);
+}
+.interspace h2{
+    padding-top: 10px;
+    text-align: center;
+    color: white;
+}
+
 
