--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -12,7 +12,7 @@
 
     --primary-color:#0f0a0a;
     --secondary-color:#f5efed;
-    --accent1-color: #2292a4;
+    --accent1-color: #194046;
     --accent2-color: #bdbf09;
     
     --heading-font: Roboto, serif;
@@ -25,14 +25,16 @@
     --nav-background-color: #222;
     --nav-link-color: #f8f8ff;
     --nav-hover-link-color:#ea4f4c;
-    --nav-hover-background-color: #e3e3d5;
+    --nav-hover-background-color: #ffffff;
 
     --special-article-background-color: cadetblue;
-    --general-background-color:rgb(239, 238, 220);
+    --general-background-color:white;
 
 } 
 
 body {
+    padding-left: 7px;
+    padding-bottom: 10px;
     max-width: 800px;
     color: var(--primary-color);
 }
@@ -91,6 +93,7 @@ main div article{
 }
 
 main div article p{
+    color:antiquewhite;
     margin:20px
 }
 
@@ -304,7 +307,10 @@ footer nav img{
 
 .paragraph-base{
     font-family: var(--heading-font);
-    /* margin-left: 160px; */
+    margin-left: 210px;
+}
+.paragraph-base1{
+    font-family: var(--heading-font);
 }
 .base-nav{
     margin-top: 2px;
@@ -313,8 +319,9 @@ footer nav img{
 
 
 .rafting-images h2{
+    color: wheat;
     text-align: center;
-    background-color: cadetblue;   
+    background-color: var(--accent1-color);  
     
 }
 
@@ -322,14 +329,16 @@ footer nav img{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color:cadetblue;
+    background-color: var(--accent1-color);
+    padding-bottom: 7px;
 }
 
 .rafting-images img{
-    width: 100px;  
+    width: 120px;  
 }
 
 .rafting-images figure figcaption{
+    color: wheat;
     text-align: center;
 }
 
@@ -441,36 +450,51 @@ footer nav img{
 
 .second_element{
     padding-top: 20px;
+    padding-bottom: 20px;
     display: grid;
     gap: 2px;
     text-align: center;
     grid-template-columns: 1fr 1fr 1fr;
-    /* border-bottom: 5px ridge; */
-    margin-bottom: 20px;
 }
 .sec_elem_img{
-    width: auto;
-    max-width: 210px;
-    height: 160px;
+    width: 240px;
+    height: 180px;
+    border: 2px ridge black;
 }
 .offer_text{
-    padding: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     text-align: justify;
     font-size:small;
 }
 
 table{
     border-collapse: collapse;
+    text-align: center;
+}
+tbody > tr:nth-of-type(even) {
+    color: white;
+    background-color: rgb(79, 113, 247);
 }
 
 tbody tr td{
     border: 1px solid black;
     padding: 5px;
 }
+tbody tr td:nth-of-type(2){
+    text-align: justify;
+}
 
 thead tr th{
+    background-color:#f6fff3;
     border: 1px solid black;
-    padding: 5px;
+    padding: 10px;
+}
+thead tr th:nth-of-type(1) {
+    width: 145px;
+}
+thead tr th:nth-of-type(4) {
+    width: 130px;
 }
 
 .interspace{
