--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -35,7 +35,7 @@
 body {
     padding-left: 7px;
     padding-bottom: 10px;
-    max-width: 800px;
+    /* max-width: 800px; */
     color: var(--primary-color);
 }
 
@@ -64,30 +64,25 @@ figcaption{
     font-size: smaller;
 }
 
-/* Styling class hero */
-.hero img{
-    display: block;
-    width: 100%;
-    height: auto;
-}
+
 /* Special style class adressing only images inside the <article> tag */
 img.special{
     position: relative;
     margin: 20px;
     float: right;
     width: 80px;
+    border:  3px;
 }
-
 main div h1{
     /* Positioning the h1 element inside the <div> element */
     display: block;
     position:absolute;
     top: 15px;
-    color: white;
+    color: wheat
 }
 main div article{
     position: absolute;
-    top: 50px;
+    top: 10vh;
     background-color: var(--accent1-color);
     margin: 30px;
 }
@@ -350,10 +345,10 @@ footer nav img{
 
 /* Styling first div element */
 .part1{
-    width: 100%;
     display: flex;
     position: relative;
-    justify-content: center;
+    align-self:center ;
+    justify-content: space-around;
 }
 
 .alternativegrid{
@@ -506,6 +501,11 @@ thead tr th:nth-of-type(4) {
     padding-top: 10px;
     text-align: center;
     color: white;
+}
+
+.indximage{
+    width:100vw;
+    border: 2px solid red;
 }
 
 
